// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builtins work as expected 0: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(eq? \\"a\\" \\"a\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 1: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(eq? \\"a\\" \\"b\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 2: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(eq? '(1 2 3) '(1 2 3))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 3: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(eqv? '(1 2 3) '(1 2 3))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 4: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(equal? 1 \\"1\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 5: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(equal? '(1 2 3) '(1 2 3))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 6: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(+)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 0,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 7: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(+ 1 2 3)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 6,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 8: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(- 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": -1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 9: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(- 1 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": -1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 10: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(*)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 11: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(* 1 2 3)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 6,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 12: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(/ 1 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 0.5,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 13: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(= 1 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 14: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(= 1 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 15: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(< 1 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 16: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(< 1 2 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 17: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(> 1 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 18: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(> 3 2 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 19: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(<= 1 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 20: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(<= 1 2 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 21: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(>= 1 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 22: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(>= 3 2 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 23: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(>= 3 2 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 24: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(number? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 25: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(number? \\"1\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 26: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(real? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 27: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(integer? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 28: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(integer? 1.1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 29: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(exact? 1.1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 30: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(exact-integer? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 31: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(exact-integer? 1.1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 32: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(zero? 0)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 33: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(zero? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 34: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(positive? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 35: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(positive? 0)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 36: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(negative? -1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 37: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(negative? 0)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 38: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(odd? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 39: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(odd? 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 40: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(even? 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 41: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(even? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 42: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(max 1 2 3)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 3,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 43: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(max)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": -Infinity,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 44: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(min)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": Infinity,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 45: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(min 1 2 3)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 46: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(abs -1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 47: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(abs 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 48: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(quotient 5 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 2,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 49: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(quotient 5 2.5)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 2,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 50: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(quotient 5 -2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": -2,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 51: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(modulo 5 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 52: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(modulo 5 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 0,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 53: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(remainder 5 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 54: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(remainder 5 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 0,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 55: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(gcd 32 4110 22)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 2,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 56: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(lcm 32 4110 22)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 723360,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 57: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(floor 1.1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 58: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(ceiling 1.1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 2,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 59: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(truncate 1.6)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 60: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(truncate 1.1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 61: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(round 1.1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 62: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(round 1.6)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 2,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 63: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(square 4)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 16,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 64: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(exact-integer-sqrt 16)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 4,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 65: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(expt 2 3)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 8,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 66: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(number->string 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "1",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 67: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(boolean? (= 0 0))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 68: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(boolean? 0)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 69: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(and #t #t #t)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 70: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(and #t #f #t)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 71: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(or #f #f #t)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 72: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(or #f #f #f)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 73: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(not #t)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 74: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(not #f)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 75: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string? \\"abc\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 76: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 77: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(make-string 3)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "   ",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 78: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(make-string 3 \\"a\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "aaa",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 79: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string \\"hi\\" \\" \\" \\"mum\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "hi mum",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 80: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string-length \\"abc\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 3,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 81: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string-ref \\"abc\\" 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "b",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 82: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string=? \\"abc\\" \\"abc\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 83: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string=? \\"abc\\" \\"def\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 84: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string<? \\"abc\\" \\"def\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 85: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string<? \\"def\\" \\"abc\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 86: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string>? \\"abc\\" \\"def\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 87: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string>? \\"def\\" \\"abc\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 88: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string<=? \\"abc\\" \\"abc\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 89: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string<=? \\"abc\\" \\"def\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 90: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string<=? \\"def\\" \\"abc\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 91: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string>=? \\"abc\\" \\"abc\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 92: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string>=? \\"def\\" \\"abc\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 93: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string>=? \\"abc\\" \\"def\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 94: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(substring \\"abc\\" 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "bc",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 95: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(substring \\"abc\\" 1 2)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "b",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 96: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string-append \\"a\\" \\"b\\" \\"c\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "abc",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 97: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(string->number \\"123\\")",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 123,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 98: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(procedure? (lambda (a) a))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 99: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(procedure? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 100: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(pair? (cons 1 2))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 101: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(pair? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 102: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(car (cons 1 2))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 103: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(cdr (cons 1 2))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 2,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 104: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(list? (list 1 2 3))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 105: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(list? (cons 1 2))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 106: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(null? (list))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 107: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(null? (cons 1 2))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 108: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(length (list 1 2 3))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 3,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 109: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(length (list))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 0,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 110: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(list-ref (list 1 2 3) 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 2,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 111: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(list->string '(\\"a\\" \\"b\\" \\"c\\"))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "abc",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 112: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(list->string (string->list \\"abc\\"))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "abc",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 113: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(promise? (delay 1))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 114: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(promise? 1)",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 115: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(force (delay 1))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 116: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(apply + 1 2 3 4 '(5 6 7 8))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 36,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Builtins work as expected 117: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "(apply + '(5 6 7 8))",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 26,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;
